--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "name": "node-red-contrib-vib-smart-valve",
-  "version": "0.0.1",
+  "version": "0.0.41",
   "description": "Smart Valve Managemeent",
   "author": "Vincent Besson <vincent@besson.be>",
   "main": "smart-valve.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/vibr77/node-red-smart-scheduler.git"
+    "url": "https://github.com/vibr77/node-red-contrib-vib-smart-valve.git"
   },
   "dependencies": {
-    "moment": "^2.29.4",
-    "PubSub": "^4.0.0"
+    "moment": "^2.29.4"
   },
   "node-red": {
     "nodes": {
