--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-red-contrib-vib-smart-valve",
-  "version": "0.0.70",
+  "version": "0.0.71",
   "description": "Smart Valve Managemeent",
   "author": "Vincent Besson <vincent@besson.be>",
   "license" : "CC-BY-2.5",
@@ -12,6 +12,9 @@
   },
   "dependencies": {
     "moment": "^2.29.4"
+  },
+  "engines": {
+    "node": ">=12.0.0"
   },
   "node-red": {
     "nodes": {
